samples/_failures_safe/1761471535_ce5c2d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_53e15f71.c: In function ‘main’:
./samples/SAFE/__tmp_53e15f71.c:150:5: error: expected declaration or statement at end of input
  150 |     sort_word_counts(word_counts, unique_count);
      |     ^~~~~~~~~~~~~~~~
